--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-########
-## Based on Lullabot Images
 version: "3.7"
 
 services:
@@ -10,7 +8,7 @@ services:
       context: web
     volumes:
       ## The site root
-      - ../public_html/:/usr/local/apache2/htdocs/
+      - ./public_html/:/usr/local/apache2/htdocs
 
     ports:
       - "8080:80"
